--- a/train/simple_triplets.ipynb
+++ b/train/simple_triplets.ipynb
@@ -26,14 +26,16 @@
     "from tqdm import tqdm\n",
     "\n",
     "from src.utils import (\n",
-    "    DataGenerator,\n",
-    "    TripletsGenerator,\n",
+    "    ImageLoader,\n",
+    "    PairsGenerator,\n",
+    "    compute_val_dcg,\n",
     "    euclidean_distance,\n",
     "    loss,\n",
     "    make_callbacks,\n",
-    "    make_model,\n",
     "    plot_history,\n",
-    "    plot_triplets,\n",
+    "    save_params,\n",
+    "    save_submission,\n",
+    "    train_val_split,\n",
     ")\n",
     "\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -42,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f40f8e99-1568-4a28-98cd-0cd551fa2d3e",
+   "id": "1a30f1b5-fb65-4349-a4b5-c91817e1d24f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,24 +53,32 @@
     "        self,\n",
     "    ):\n",
     "        self.seed = 39\n",
-    "        self.batch_size = 64\n",
-    "        self.img_size = (512, 60)\n",
-    "        self.crop = self.img_size < (512, 81)\n",
-    "        self.n_chanels = 1\n",
-    "        self.n_folds = 6\n",
-    "        self.fold = 2\n",
+    "        self.batch_size = 32\n",
+    "        self.img_size = (512, 81)\n",
+    "        self.n_channels = 1\n",
+    "        self.fold = 0\n",
     "        self.norm = False\n",
+    "        self.pos_label = 0\n",
     "        self.emb_len = 1024\n",
-    "        self.kernel_size = (5, 2)\n",
+    "        self.kernel_size = 3\n",
     "        self.act_fn = \"relu\"\n",
-    "        self.n_epochs = 60\n",
-    "        self.input_shape = (*self.img_size, self.n_chanels)"
+    "        self.batch_norm = True\n",
+    "        self.n_epochs = 150\n",
+    "        self.center_crop = False\n",
+    "        self.input_shape = (\n",
+    "            self.img_size\n",
+    "            if self.n_channels is None\n",
+    "            else (*self.img_size, self.n_channels)\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "cfg = CFG()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d7dc3aa8-1124-460b-bcba-fa7ab95af0ea",
+   "id": "236267d6-0d2c-40dc-a28f-25c3e606326e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,53 +88,29 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bbe8e0ab-9e38-4bc1-903a-c1b1fdfc5dfa",
+   "id": "b5767329-be2a-46a6-9d84-e480053b5318",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(512, 60, 1)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cfg.input_shape"
+    "root_dir = \"/app/_data/artist_data/\"\n",
+    "mod_dir = f\"/app/_data/artist_data/models/triplets_fold_{cfg.fold}/\"\n",
+    "os.makedirs(mod_dir, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0b7e2a98-e439-4b42-a682-f53f93e3cf00",
+   "id": "9c8554a1-fb2f-4d70-bb86-57ecd9edc352",
    "metadata": {},
    "outputs": [],
    "source": [
-    "root_dir = \"/app/_data/artist_data/\"\n",
-    "mod_dir = \"/app/_data/artist_data/models/test_arch/tripl_7/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "58034136-fbe6-4b29-84d3-f74ae8ab846e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = pd.read_csv(os.path.join(root_dir, \"train.csv\"))\n",
-    "train = train[train[\"artistid_count\"] != 1].reset_index(drop=True)\n",
-    "test = pd.read_csv(os.path.join(root_dir, \"test_meta.tsv\"), sep=\"\\t\")\n",
-    "test[\"path\"] = test[\"archive_features_path\"].apply(\n",
-    "    lambda x: os.path.join(root_dir, \"test_features\", x)\n",
-    ")"
+    "train = pd.read_csv(os.path.join(root_dir, \"train_meta.tsv\"), sep=\"\\t\")\n",
+    "test = pd.read_csv(os.path.join(root_dir, \"test_meta.tsv\"), sep=\"\\t\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11576fe3-121c-4985-b8d5-0b2bfa55d182",
+   "id": "ea07f88c-8885-4abc-b490-2a50b024a561",
    "metadata": {
     "tags": []
    },
@@ -134,31 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d617552d-2c8f-4979-84d9-68459c8b89fb",
+   "execution_count": 6,
+   "id": "227bc014-0c0b-4df4-8e28-1e17a5d73801",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gkf = StratifiedGroupKFold(n_splits=cfg.n_folds, shuffle=True, random_state=cfg.seed)\n",
-    "for n, (train_ids, val_ids) in enumerate(\n",
-    "    gkf.split(\n",
-    "        X=train[[\"artistid\", \"artistid_count\"]],\n",
-    "        y=train[\"artistid_count\"],\n",
-    "        groups=train[\"artistid\"],\n",
-    "    )\n",
-    "):\n",
-    "    train.loc[val_ids, \"fold\"] = n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "943c2865-8238-4bc9-b943-c38096917bad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df = train[train[\"fold\"] != cfg.fold].reset_index(drop=True)\n",
-    "val_df = train[train[\"fold\"] == cfg.fold].reset_index(drop=True)"
+    "train_df, val_df = train_val_split(df=train, fold=2, seed=42)"
    ]
   },
   {
@@ -185,6 +152,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "80c50bcc-3979-4228-bb7c-60dc21cadc1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1         True\n",
+       "11034     True\n",
+       "11019     True\n",
+       "11021     True\n",
+       "11022     True\n",
+       "         ...  \n",
+       "17103     True\n",
+       "17106     True\n",
+       "423      False\n",
+       "17341    False\n",
+       "18468    False\n",
+       "Name: artistid, Length: 16159, dtype: bool"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.artistid.value_counts()>=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b36850e2-cde9-4f1c-b751-db0b94c7203f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TripletsGenerator(keras.utils.Sequence):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        df,\n",
+    "        data_loader,\n",
+    "        batch_size=32,\n",
+    "        norm=False,\n",
+    "        n_chanels=1,\n",
+    "        shuffle=True,\n",
+    "        debug=True,\n",
+    "    ):\n",
+    "        self.df = df.reset_index(drop=True)\n",
+    "        self.data_loader = data_loader\n",
+    "        self.batch_size = batch_size\n",
+    "        self.shuffle = shuffle\n",
+    "        self.artist_ids = self.data[\"artistid\"].unique().tolist()\n",
+    "        self.artis2path = self.data.groupby(\"artistid\").agg(list)[\"path\"].to_dict()\n",
+    "        self.paths = self.data[\"path\"].tolist()\n",
+    "        self.debug = debug\n",
+    "        if self.shuffle:\n",
+    "            np.random.shuffle(self.paths)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.data.shape[0] // self.batch_size\n",
+    "\n",
+    "    def on_epoch_end(self):\n",
+    "        if self.shuffle:\n",
+    "            np.random.shuffle(self.artist_ids)\n",
+    "\n",
+    "    def make_triplet(self):\n",
+    "        art_pos, art_neg = rnd.sample(self.artist_ids, 2)\n",
+    "        anchor_path, positive_path = rnd.sample(self.artis2path[art_pos], 2)\n",
+    "        negative_path = rnd.sample(self.artis2path[art_neg], 1)[0]\n",
+    "        anchor, positive, negative = [\n",
+    "            self.load_img(path) for path in [anchor_path, positive_path, negative_path]\n",
+    "        ]\n",
+    "        if self.debug:\n",
+    "            return (\n",
+    "                (anchor, positive, negative),\n",
+    "                (anchor_path, positive_path, negative_path),\n",
+    "                (art_pos, art_neg),\n",
+    "            )\n",
+    "        else:\n",
+    "            return (anchor, positive, negative)\n",
+    "\n",
+    "    def __getitem__(self, batch_ix):\n",
+    "        imgs = {\n",
+    "            \"anchor\": np.zeros([self.batch_size, *self.img_size, self.n_chanels]),\n",
+    "            \"positive\": np.zeros([self.batch_size, *self.img_size, self.n_chanels]),\n",
+    "            \"negative\": np.zeros([self.batch_size, *self.img_size, self.n_chanels]),\n",
+    "        }\n",
+    "        for i in range(self.batch_size):\n",
+    "            (\n",
+    "                imgs[\"anchor\"][i, ...],\n",
+    "                imgs[\"positive\"][i, ...],\n",
+    "                imgs[\"negative\"][i, ...],\n",
+    "            ) = self.make_triplet()\n",
+    "\n",
+    "        return imgs, np.zeros(self.batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "04c50657-ce6a-4c16-b697-6b87cb2d2fd6",
    "metadata": {},
@@ -192,7 +259,7 @@
    "source": [
     "train_gen = TripletsGenerator(\n",
     "    data=train_df,\n",
-    "    img_size=cfg.img_size,\n",
+    "    data_loader=cfg.img_size,\n",
     "    batch_size=cfg.batch_size,\n",
     "    norm=cfg.norm,\n",
     "    n_chanels=cfg.n_chanels,\n",
