--- a/train/contrastive_loss.ipynb
+++ b/train/contrastive_loss.ipynb
@@ -19,9 +19,8 @@
     "from tensorflow import keras\n",
     "from tqdm import tqdm\n",
     "\n",
+    "from src.data_utils import ImageLoader, PairsGenerator, train_val_split\n",
     "from src.utils import (\n",
-    "    ImageLoader,\n",
-    "    PairsGenerator,\n",
     "    compute_val_dcg,\n",
     "    euclidean_distance,\n",
     "    loss,\n",
@@ -29,7 +28,6 @@
     "    plot_history,\n",
     "    save_params,\n",
     "    save_submission,\n",
-    "    train_val_split,\n",
     ")\n",
     "\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -902,7 +900,9 @@
   {
    "cell_type": "markdown",
    "id": "05c059b6-f095-42ec-a671-82001015beeb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Test"
    ]
